create a text editor interface

--- a/Lab2/WpfApp1/WpfApp1/WpfApp1.csproj
+++ b/Lab2/WpfApp1/WpfApp1/WpfApp1.csproj
@@ -94,5 +94,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\Clear.png" />
+    <Resource Include="Images\Copy.png" />
+    <Resource Include="Images\Open.png" />
+    <Resource Include="Images\Paste.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
